Adjusted more UI coloration elements.